adding models and schema's

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,6 +44,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<!--   
+  <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/ReactToastify.css" /> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -53,7 +56,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
   <title>SpotSound Music - Kendi Müzik Listeni Oluştur ve Dinle</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "SpotSound Music",
+      "url": "https://www.spotsoundmusic.com",
+      "potentialAction": [
+        {
+          "@type": "AbouthAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://www.spotsoundmusic.com/abouth"
+          },
+          "name": "Hakkımızda"
+        },
+        {
+          "@type": "ContactAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://www.spotsoundmusic.com/contact"
+          },
+          "name": "Bizimle iletişime geç"
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
